--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>holisss</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <title>sg</title>
+  <link rel="stylesheet" href="home.css">
 </head>
 <body>
-  <h1>holanda check</h1>
-<body>
+  <!-- nav -->
+  <div>
+    <h1>asdasd</h1>
+  </div>
+
+</body>
 </html>
